dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(tcpjunk, 2.8.01 Beta)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC








PKG_CHECK_MODULES(TCPJUNK, [gtk+-2.0 >= 2.8 libssl gtksourceview-2.0])




AC_OUTPUT([
Makefile
src/Makefile

])
